# openeuro-longctx-datamix

./: .gitignore  AGENTS.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml
.claude/commands/: leonardo.md
configs/: longctx_dataset_recipes.json
docs/: context_extension_roadmap.md  eval_base_lm_niah.md  generate_training_report.py  hf_tokenized_artifacts.md  leonardo_32k_smoke_test_debug_log.md  leonardo_training.md  long_context_200k_considerations.md  long_context_dataset_expansion_plan.md  project_summary.md  ruler_eval_yarn_v2_32k.md  superlong_2m_small_gpu_training_2026-06-12.md  tiny_superlong_context_smoke.md  tiny_superlong_small_gpu_results_2026-06-12.md  training_report_job18536300.md  weekend_superlong_gpu_experiments_2026-06-13.md
examples/: train_openeurollm_longctx.sh
lumi/: DATA_ANALYSIS.md  LANGUAGE_ANALYSIS.md  LONGDOC_STRATEGY.md  LUMI_STATUS.md  run-lumi.sh  setup_megatron_leonardo.sh  setup_venv_leonardo.sh
lumi/slurm/: convert_checkpoint.sbatch  convert_yarn_v2_1k.sbatch  download_tokenized.sbatch  eval_base_lm_niah.sbatch  eval_base_lm_niah_yarn_v2.sbatch  eval_base_lm_niah_yarn_v2_ext2.sbatch  eval_base_lm_niah_yarn_v2_extended.sbatch  eval_generation_check.sbatch  eval_oneruler_smoke.sbatch  eval_ruler_leonardo.sbatch  eval_ruler_leonardo_32k.sbatch  eval_ruler_yarn_v2.sbatch  gpu_diag.sbatch  hello.sbatch  (+32 more)
scripts/: construct_long_context_documents.py  eval_base_lm_niah.py  generate_niah_figures.py  generate_ruler_figures.py  make_2m_curriculum_data.py  make_anti_cropping_traces.py  nvidia_stream_upload_all_languages.sh  oneruler_score_base_lm.py  run_weekend_superlong_experiments.sh  run_weekend_superlong_experiments_v2.sh  tiny_superlong_smoke.py  train_hf_superlong_smoke.py
(+20 files in other folders)
